--- a/style.css
+++ b/style.css
@@ -126,48 +126,61 @@ main {
     font-weight: 700;
 font-size: 20px;
 }
-.what_i_do{
-    margin-top: 208px;
-}
 .section-head{
     
     max-width: 909px;
     margin: 0 auto;
 }
-.what_i_do_container{
+.skills_container{
     display: flex;
     justify-content: space-between;
     
     margin-top: 50px;
 }
-.what_i_do_info{
+.skills_info{
     padding: 33px;
     box-shadow: 0px 6px 50px rgba(0, 0, 0, 0.06);
     max-width: 204px;
 }
-.what_i_do_info h5{
-    margin-bottom: 20px;
-}
-.resume{
-    margin-top: 208px;
-    
-}
-.resume_container{
-    
+.skills_container{
     display: flex;
-    gap: 25px;
     justify-content: space-between;
+    margin-top: 50px;
+    gap: 104px 33px 30px 30px;
 }
-.resu{
+.skills{
+    background: #FFFFFF;
+box-shadow: 0px 6px 50px rgba(0, 0, 0, 0.06);
+border-radius: 5px;
+}
+.skills_title{
+    margin-top: 30px;
+    font-weight: 700;
+font-size: 20px;
+line-height: 27px;
+}
+.skills_description{
+    margin-top: 20px;
+    max-width: 204px;
+    font-weight: 400;
+font-size: 16px;
+
+}
+
+.what_i_do {
+    text-align: center;
     margin-bottom: 30px;
     font-weight: 700;
-font-size: 30px;
+    font-size: 35px;
 }
-.resu-sub{
-    font-weight: 700;
-font-size: 25px;
+
+.what_i_do-description {
+    font-weight: 400;
+    font-size: 18px;
+    text-align: center;
+    color: #757575;
 }
-.resume_box{
-    border-bottom: 1px solid #D1D1D1;
-    padding: 20px;
+.resume{
+    margin-top: 130px;
+    margin-bottom: 130px;
 }
