--- a/style.css
+++ b/style.css
@@ -221,7 +221,8 @@ hr{
 }
 .resume_button{
     margin-top: 10px ;
-    text-align: center;    
+    text-align: center;  
+    margin-bottom: 50px;  
 }
 footer{
     max-width: 1600px;
@@ -241,4 +242,31 @@ footer{
 border-radius: 5px;
 border: 0px;
 }
-
+.footer_section{
+    margin-top: 113px;
+    display: flex;
+    gap: 115px;
+    background-color: #FFF8F3;
+    padding: 130px 230px;
+    justify-content: space-between;
+}
+.connect_side h3{
+    font-weight: 700;
+font-size: 35px;
+}
+.Message_side h3{
+    margin-bottom: 24px;
+    font-weight: 700;
+font-size: 35px;
+}
+.input{
+    margin-bottom: 24px;
+    border: 0px;
+    width: 461px;
+height: 64px;
+}
+.input_message{
+    margin-bottom: 24px;
+    width: 461px;
+height: 180px;
+}
