--- a/style.css
+++ b/style.css
@@ -149,9 +149,10 @@ font-size: 20px;
     gap: 104px 33px 30px 30px;
 }
 .skills{
+    padding: 20px 20px;
     background: #FFFFFF;
 box-shadow: 0px 6px 50px rgba(0, 0, 0, 0.06);
-border-radius: 5px;
+border-radius: 10px;
 }
 .skills_title{
     margin-top: 30px;
