--- a/style.css
+++ b/style.css
@@ -292,6 +292,8 @@ font-size: 35px;
 }
 .input_message{
     margin-bottom: 24px;
+    padding: 20px;
+    border: 0px;
     width: 100%;
 height: 180px;
 display: block;
